# fastApi-base-project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: .env.template  main.py
src/alembic/versions/: 2024_11_09_1437-60b2a60ad8e2_create_users_table.py
src/api/: __init__.py
src/api/api_v1/: __init__.py  users.py
src/core/: config.py
src/core/models/: __init__.py  base.py  db_helper.py  user.py
src/core/schemas/: user.py
src/crud/: users.py
