[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = {extras = ["stadard"], version = "^0.32.0"}
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.6.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

